# literature_map

./: docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml  seed.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: cc71fe224fed_initial_schema.py
backend/app/: db.py  db_models.py  location_resolver.py  main.py
backend/app/routers/: locations.py  poems.py  poets.py
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  railway.toml
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddPoemModal.tsx  AddPoetModal.tsx  PoetPanel.tsx
