[tool.poetry]
name = "literature-map"
version = "0.1.0"
description = "Tang Dynasty Poet Travel Map"
authors = ["zhaolianzhou"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.111.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}
pydantic = "2.7.1"
httpx = "0.27.0"
python-multipart = "0.0.9"
jieba = "0.42.1"
sqlmodel = "0.0.21"
psycopg2-binary = "2.9.9"
alembic = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
